<?xml version="1.0"?>
<package>
  <name>ipa_odom_from_velocity</name>
  <version>0.1.0</version>
  <description>ipa_odom_from_velocity</description>

  <maintainer email="florenz.graf@ipa.fraunhofer.de">Florenz Graf</maintainer>
  <author>Florenz Graf</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

</package>
